--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </header>
 
   <main>
-    <section>
+    <section class="first">
       <div class="hero-img">
         <picture>
           <source srcset="./assets/images/image-web-3-desktop.jpg" media="(min-width: 768px)" />
@@ -61,71 +61,70 @@
         <h1>The Bright Future of Web 3.0?</h1>
 
         <article>
-          <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
+          <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people.
             But is it really fulfilling its promise?</p>
             <button class="cta-btn">Read More</button>
         </article>
       </div>
+    </section>
 
+    <section class="news-container">
       <aside>
         <article>
           <h2>New</h2>
-  
           <div class="news">
             <h3>Hydrogen VS Electric Cars</h3>
             <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
           </div>
-  
           <div class="news">
             <h3>The Downsides of AI Artistry</h3>
             <p>What are the possible adverse effects of on-demand AI image generation?</p>
           </div>
-  
           <div class="news">
             <h3>Is VC Funding Drying Up?</h3>
             <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
           </div>
         </article>
       </aside>
+    </section>
 
-      <div class="categories">
-        <div class="retro-section category">
-          <div class="thumbnail-img">
-            <img src="./assets/images/image-retro-pcs.jpg" alt="">
-          </div>
-
-          <div class="content">
-            <span>01</span>
-            <h3>Reviving Retro PCs</h3>
-            <p>What happens when old PCs are given modern upgrades?</p>
-          </div>
+    <div class="categories">
+      <div class="retro-section category">
+        <div class="thumbnail-img">
+          <img src="./assets/images/image-retro-pcs.jpg" alt="">
         </div>
 
-        <div class="laptop-section category">
-          <div class="thumbnail-img">
-            <img src="./assets/images/image-top-laptops.jpg" alt="">
-          </div>
-
-          <div class="content">
-            <span>02</span>
-            <h3>Top 10 Laptops of 2022</h3>
-            <p>Our best picks for various needs and budgets.</p>
-          </div>
-        </div>
-
-        <div class="gaming-section category">
-          <div class="thumbnail-img">
-            <img src="./assets/images/image-gaming-growth.jpg" alt="">
-          </div>
-
-          <div class="content">
-            <span>03</span>
-            <h3>The Growth of Gaming</h3>
-            <p>How the pandemic has sparked fresh opportunities.</p>
-          </div>
+        <div class="content">
+          <span>01</span>
+          <h3>Reviving Retro PCs</h3>
+          <p>What happens when old PCs are given modern upgrades?</p>
         </div>
       </div>
-    </section>
+
+      <div class="laptop-section category">
+        <div class="thumbnail-img">
+          <img src="./assets/images/image-top-laptops.jpg" alt="">
+        </div>
+
+        <div class="content">
+          <span>02</span>
+          <h3>Top 10 Laptops of 2022</h3>
+          <p>Our best picks for various needs and budgets.</p>
+        </div>
+      </div>
+
+      <div class="gaming-section category">
+        <div class="thumbnail-img">
+          <img src="./assets/images/image-gaming-growth.jpg" alt="">
+        </div>
+
+        <div class="content">
+          <span>03</span>
+          <h3>The Growth of Gaming</h3>
+          <p>How the pandemic has sparked fresh opportunities.</p>
+        </div>
+      </div>
+    </div>
   </main>
 
   <div class="attribution">
