--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <script src="./dist/script.js" defer></script>
 
     <style>
+        .attribution { font-size: 11px; text-align: center; margin-top: 1em; }
+        .attribution a { color: hsl(228, 45%, 44%); }
+    </style>
+
+    <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap');
     </style>
 </head>
@@ -111,5 +116,10 @@
             </div>
         </div>
     </main>
+
+    <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="#">Hamdi Kamel</a>.
+    </div>
 </body>
 </html>
